metadata/force-app/main/default/objects/Attendee__c/fields/addresstreet1__c.field-meta.xml
<CustomField>
    <fullName>addresstreet1__c</fullName>
    <description>registrant provisioned text</description>
    <label>addresstreet1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>