metadata/force-app/main/default/objects/Attendee__c/fields/addresstreet2__c.field-meta.xml
<CustomField>
    <fullName>addresstreet2__c</fullName>
    <description>registrant provisioned text</description>
    <label>addresstreet2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>