metadata/force-app/main/default/objects/Attendee__c/fields/answeredallpolls__c.field-meta.xml
<CustomField>
    <fullName>answeredallpolls__c</fullName>
    <description>Whether a user answered all polls or not. Typically, limited to Y or N, but may extend in the future.</description>
    <label>answeredallpolls</label>
    <length>255</length>
    <type>Text</type>
</CustomField>