metadata/force-app/main/default/objects/Attendee__c/fields/answeredallsurveys__c.field-meta.xml
<CustomField>
    <fullName>answeredallsurveys__c</fullName>
    <description>Whether a user answered all surveys or not. Typically, limited to Y or N, but may extend in the future.</description>
    <label>answeredallsurveys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>