metadata/force-app/main/default/objects/Attendee__c/fields/answeredanypoll__c.field-meta.xml
<CustomField>
    <fullName>answeredanypoll__c</fullName>
    <description>Whether a user answered any poll or not. Typically, limited to Y or N, but may extend in the future.</description>
    <label>answeredanypoll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>