metadata/force-app/main/default/objects/Attendee__c/fields/answeredanysurvey__c.field-meta.xml
<CustomField>
    <fullName>answeredanysurvey__c</fullName>
    <description>Whether a user answered any survey or not. Typically, limited to Y or N, but may extend in the future.</description>
    <label>answeredanysurvey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>