metadata/force-app/main/default/objects/Attendee__c/fields/answeredpolls__c.field-meta.xml
<CustomField>
    <fullName>answeredpolls__c</fullName>
    <description>The number of polls the user responded to</description>
    <label>answeredpolls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>