metadata/force-app/main/default/objects/Attendee__c/fields/answeredsurveys__c.field-meta.xml
<CustomField>
    <fullName>answeredsurveys__c</fullName>
    <description>The number of surveys the user responded to</description>
    <label>answeredsurveys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>