metadata/force-app/main/default/objects/Attendee__c/fields/archiveminutes__c.field-meta.xml
<CustomField>
    <fullName>archiveminutes__c</fullName>
    <description>The total number of minutes this user attended the archived portion of this event. Multiple console launches are aggregated into a single number.</description>
    <label>archiveminutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>