metadata/force-app/main/default/objects/Attendee__c/fields/archiveviewed__c.field-meta.xml
<CustomField>
    <fullName>archiveviewed__c</fullName>
    <description>The number of times the attendee launched the event console during the archive period of the event.</description>
    <label>archiveviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>