metadata/force-app/main/default/objects/Attendee__c/fields/askedanyquestion__c.field-meta.xml
<CustomField>
    <fullName>askedanyquestion__c</fullName>
    <description>Whether a user asked any question or not. Typically, limited to Y or N, but may extend in the future.</description>
    <label>askedanyquestion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>