metadata/force-app/main/default/objects/Attendee__c/fields/askedquestions__c.field-meta.xml
<CustomField>
    <fullName>askedquestions__c</fullName>
    <description>The number of questions the user asked</description>
    <label>askedquestions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>