metadata/force-app/main/default/objects/Attendee__c/fields/attendedarchive__c.field-meta.xml
<CustomField>
    <fullName>attendedarchive__c</fullName>
    <description>Y or N, whether this attendee viewed the archived portion of this event.</description>
    <label>attendedarchive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>