metadata/force-app/main/default/objects/Attendee__c/fields/attendedlive__c.field-meta.xml
<CustomField>
    <fullName>attendedlive__c</fullName>
    <description>Y or N, whether this attendee viewed the live event.</description>
    <label>attendedlive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>