metadata/force-app/main/default/objects/Attendee__c/fields/browser__c.field-meta.xml
<CustomField>
    <fullName>browser__c</fullName>
    <description>system detected</description>
    <label>browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>