metadata/force-app/main/default/objects/Attendee__c/fields/campaigncode__c.field-meta.xml
<CustomField>
    <fullName>campaigncode__c</fullName>
    <description>Field to capture external campaign code or any other value</description>
    <label>campaigncode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>