metadata/force-app/main/default/objects/Attendee__c/fields/certificationcredit__c.field-meta.xml
<CustomField>
    <fullName>certificationcredit__c</fullName>
    <description>NR or hours specified in Credit for Completion in certification widget</description>
    <label>certificationcredit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>