metadata/force-app/main/default/objects/Attendee__c/fields/certificationtimestamp__c.field-meta.xml
<CustomField>
    <fullName>certificationtimestamp__c</fullName>
    <description>Date and Time certification took place</description>
    <label>certificationtimestamp</label>
    <type>DateTime</type>
</CustomField>