metadata/force-app/main/default/objects/Attendee__c/fields/certificationwidgetresult__c.field-meta.xml
<CustomField>
    <fullName>certificationwidgetresult__c</fullName>
    <description>Incomplete or Complete based on result from certification widget</description>
    <label>certificationwidgetresult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>