metadata/force-app/main/default/objects/Attendee__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <description>registrant provisioned text</description>
    <label>city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>