metadata/force-app/main/default/objects/Attendee__c/fields/company__c.field-meta.xml
<CustomField>
    <fullName>company__c</fullName>
    <description>registrant provisioned text</description>
    <label>company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>