metadata/force-app/main/default/objects/Attendee__c/fields/companyindustry__c.field-meta.xml
<CustomField>
    <fullName>companyindustry__c</fullName>
    <description>registrant provisioned text</description>
    <label>companyindustry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>