metadata/force-app/main/default/objects/Attendee__c/fields/companysize__c.field-meta.xml
<CustomField>
    <fullName>companysize__c</fullName>
    <description>registrant provisioned text</description>
    <label>companysize</label>
    <length>255</length>
    <type>Text</type>
</CustomField>