metadata/force-app/main/default/objects/Attendee__c/fields/createtimestamp__c.field-meta.xml
<CustomField>
    <fullName>createtimestamp__c</fullName>
    <description>Date and Time registration took place</description>
    <label>createtimestamp</label>
    <type>DateTime</type>
</CustomField>