metadata/force-app/main/default/objects/Attendee__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>The email address for this attendee.</description>
    <label>email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>