metadata/force-app/main/default/objects/Attendee__c/fields/engagementscore__c.field-meta.xml
<CustomField>
    <fullName>engagementscore__c</fullName>
    <description>This is a number between 0 and 10.0 measuring how engaged a user was based on activity during the webcast.</description>
    <label>engagementscore</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>