metadata/force-app/main/default/objects/Attendee__c/fields/eventemail__c.field-meta.xml
<CustomField>
    <fullName>eventemail__c</fullName>
    <description>registrant provisioned text (Y or N)</description>
    <label>eventemail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>