metadata/force-app/main/default/objects/Attendee__c/fields/eventid__c.field-meta.xml
<CustomField>
    <fullName>eventid__c</fullName>
    <description>unique event identifier</description>
    <label>eventid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>