metadata/force-app/main/default/objects/Attendee__c/fields/eventtitle__c.field-meta.xml
<CustomField>
    <fullName>eventtitle__c</fullName>
    <description>The main tagline or title for the event. Typically under 100 characters.</description>
    <label>eventtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>