metadata/force-app/main/default/objects/Attendee__c/fields/eventuserid__c.field-meta.xml
<CustomField>
    <fullName>eventuserid__c</fullName>
    <description>The ON24-generated unique identified for a particular registrant. Anyone who registers successfully gets a new eventuserid. A user who registers typically gets an event cookie that prevents him from re-registering from the same machine, avoiding duplicates.</description>
    <label>eventuserid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>