metadata/force-app/main/default/objects/Attendee__c/fields/exteventusercd__c.field-meta.xml
<CustomField>
    <fullName>exteventusercd__c</fullName>
    <description>unique external user identifier</description>
    <label>exteventusercd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>