metadata/force-app/main/default/objects/Attendee__c/fields/fax__c.field-meta.xml
<CustomField>
    <fullName>fax__c</fullName>
    <description>registrant provisioned text</description>
    <label>fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>