metadata/force-app/main/default/objects/Attendee__c/fields/firstarchiveactivity__c.field-meta.xml
<CustomField>
    <fullName>firstarchiveactivity__c</fullName>
    <description>The date/time this attendee first opened the event console during the archived event.  e.g., Mon, 30 Mar 2009 12:27 PDT</description>
    <label>firstarchiveactivity</label>
    <type>DateTime</type>
</CustomField>