metadata/force-app/main/default/objects/Attendee__c/fields/firstname__c.field-meta.xml
<CustomField>
    <fullName>firstname__c</fullName>
    <description>registrant provisioned text</description>
    <label>firstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>