metadata/force-app/main/default/objects/Attendee__c/fields/homephone__c.field-meta.xml
<CustomField>
    <fullName>homephone__c</fullName>
    <description>registrant provisioned text</description>
    <label>homephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>