metadata/force-app/main/default/objects/Attendee__c/fields/ipaddress__c.field-meta.xml
<CustomField>
    <fullName>ipaddress__c</fullName>
    <description>system detected</description>
    <label>ipaddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>