metadata/force-app/main/default/objects/Attendee__c/fields/jobfunction__c.field-meta.xml
<CustomField>
    <fullName>jobfunction__c</fullName>
    <description>registrant provisioned text</description>
    <label>jobfunction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>