metadata/force-app/main/default/objects/Attendee__c/fields/jobtitle__c.field-meta.xml
<CustomField>
    <fullName>jobtitle__c</fullName>
    <description>registrant provisioned text</description>
    <label>jobtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>