metadata/force-app/main/default/objects/Attendee__c/fields/lastarchiveactivity__c.field-meta.xml
<CustomField>
    <fullName>lastarchiveactivity__c</fullName>
    <description>The date/time this attendee was last known to have an open event console during the archived event. e.g., Mon, 30 Mar 2009 12:27 PDT</description>
    <label>lastarchiveactivity</label>
    <type>DateTime</type>
</CustomField>