metadata/force-app/main/default/objects/Attendee__c/fields/lastliveactivity__c.field-meta.xml
<CustomField>
    <fullName>lastliveactivity__c</fullName>
    <description>The date/time this attendee was last known to have an open event console during this live event. e.g., Mon, 30 Mar 2009 12:27 PDT</description>
    <label>lastliveactivity</label>
    <type>DateTime</type>
</CustomField>