metadata/force-app/main/default/objects/Attendee__c/fields/lastname__c.field-meta.xml
<CustomField>
    <fullName>lastname__c</fullName>
    <description>registrant provisioned text</description>
    <label>lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>