metadata/force-app/main/default/objects/Attendee__c/fields/liveminutes__c.field-meta.xml
<CustomField>
    <fullName>liveminutes__c</fullName>
    <description>The total number of minutes this user attended the live event. Multiple console launches are aggregated into a single number.</description>
    <label>liveminutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>