metadata/force-app/main/default/objects/Attendee__c/fields/liveviewed__c.field-meta.xml
<CustomField>
    <fullName>liveviewed__c</fullName>
    <description>The number of times the attendee launched the event console during the live event.</description>
    <label>liveviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>