metadata/force-app/main/default/objects/Attendee__c/fields/marketingemail__c.field-meta.xml
<CustomField>
    <fullName>marketingemail__c</fullName>
    <description>registrant provisioned text (Y or N)</description>
    <label>marketingemail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>