metadata/force-app/main/default/objects/Attendee__c/fields/Number_of_Questions_Asked__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions_Asked__c</fullName>
    <description>BODEV-34: Number field to capture the value of askedquestions field (text) in number format. Updated by Process Builder &quot;Main Process - Attendee&quot;.</description>
    <label>Number of Questions Asked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>