metadata/force-app/main/default/objects/Attendee__c/fields/os__c.field-meta.xml
<CustomField>
    <fullName>os__c</fullName>
    <description>system detected</description>
    <label>os</label>
    <length>255</length>
    <type>Text</type>
</CustomField>