metadata/force-app/main/default/objects/Attendee__c/fields/partnerref__c.field-meta.xml
<CustomField>
    <fullName>partnerref__c</fullName>
    <description>variable campaign identifier</description>
    <label>partnerref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>