metadata/force-app/main/default/objects/Attendee__c/fields/poll2answer__c.field-meta.xml
<CustomField>
    <fullName>poll2answer__c</fullName>
    <description>User-submitted answer to the poll.</description>
    <label>poll2answer</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>