metadata/force-app/main/default/objects/Attendee__c/fields/poll2question__c.field-meta.xml
<CustomField>
    <fullName>poll2question__c</fullName>
    <description>Client-determined poll question asked to the audience.</description>
    <label>poll2question</label>
    <length>3600</length>
    <type>LongTextArea</type>
</CustomField>