metadata/force-app/main/default/objects/Attendee__c/fields/resource10viewed__c.field-meta.xml
<CustomField>
    <fullName>resource10viewed__c</fullName>
    <description>Name of 10th resource viewed in the Resource Widget</description>
    <label>resource10viewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>