metadata/force-app/main/default/objects/Attendee__c/fields/resource1viewed__c.field-meta.xml
<CustomField>
    <fullName>resource1viewed__c</fullName>
    <description>Name of 1st resource viewed in the Resource Widget</description>
    <label>resource1viewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>