metadata/force-app/main/default/objects/Attendee__c/fields/resource2viewed__c.field-meta.xml
<CustomField>
    <fullName>resource2viewed__c</fullName>
    <description>Name of 2nd resource viewed in the Resource Widget</description>
    <label>resource2viewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>