metadata/force-app/main/default/objects/Attendee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates whether the lead has only registered or also attended the webinar.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>On-Demand</fullName>
            </value>
            <value>
                <fullName>Attended &amp; On-Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>