metadata/force-app/main/default/objects/Attendee__c/fields/std10__c.field-meta.xml
<CustomField>
    <fullName>std10__c</fullName>
    <description>registrant provisioned text</description>
    <label>std10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>