metadata/force-app/main/default/objects/Attendee__c/fields/std1__c.field-meta.xml
<CustomField>
    <fullName>std1__c</fullName>
    <description>registrant provisioned text</description>
    <label>std1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>