metadata/force-app/main/default/objects/Attendee__c/fields/std2__c.field-meta.xml
<CustomField>
    <fullName>std2__c</fullName>
    <description>registrant provisioned text</description>
    <label>std2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>