metadata/force-app/main/default/objects/Attendee__c/fields/survey10answer__c.field-meta.xml
<CustomField>
    <fullName>survey10answer__c</fullName>
    <description>User-submitted answer to the survey question.</description>
    <label>survey10answer</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>