metadata/force-app/main/default/objects/Attendee__c/fields/survey11question__c.field-meta.xml
<CustomField>
    <fullName>survey11question__c</fullName>
    <description>Client-determined survey question asked to the audience.</description>
    <label>survey11question</label>
    <length>3600</length>
    <type>LongTextArea</type>
</CustomField>