metadata/force-app/main/default/objects/Attendee__c/fields/survey12answer__c.field-meta.xml
<CustomField>
    <fullName>survey12answer__c</fullName>
    <description>User-submitted answer to the survey question.</description>
    <label>survey12answer</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>