metadata/force-app/main/default/objects/Attendee__c/fields/survey12question__c.field-meta.xml
<CustomField>
    <fullName>survey12question__c</fullName>
    <description>Client-determined survey question asked to the audience.</description>
    <label>survey12question</label>
    <length>3600</length>
    <type>LongTextArea</type>
</CustomField>