metadata/force-app/main/default/objects/Attendee__c/fields/testresult__c.field-meta.xml
<CustomField>
    <fullName>testresult__c</fullName>
    <description>Pass/Fail</description>
    <label>testresult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>