metadata/force-app/main/default/objects/Attendee__c/fields/testwidgetresult__c.field-meta.xml
<CustomField>
    <fullName>testwidgetresult__c</fullName>
    <description>Did not attempt, Passed, Failed</description>
    <label>testwidgetresult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>