metadata/force-app/main/default/objects/Attendee__c/fields/totalresourcesviewed__c.field-meta.xml
<CustomField>
    <fullName>totalresourcesviewed__c</fullName>
    <description>total number or resources viewed from the Resource Widget</description>
    <label>totalresourcesviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>