metadata/force-app/main/default/objects/Attendee__c/fields/useranswer1__c.field-meta.xml
<CustomField>
    <fullName>useranswer1__c</fullName>
    <description>Presenter response to user submitted question through QnA widget</description>
    <label>useranswer1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>