metadata/force-app/main/default/objects/Attendee__c/fields/useranswer2__c.field-meta.xml
<CustomField>
    <fullName>useranswer2__c</fullName>
    <description>Presenter response to user submitted question through QnA widget</description>
    <label>useranswer2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>