metadata/force-app/main/default/objects/Attendee__c/fields/userquestion1__c.field-meta.xml
<CustomField>
    <fullName>userquestion1__c</fullName>
    <description>User submitted question through QnA widget</description>
    <label>userquestion1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>