metadata/force-app/main/default/objects/Attendee__c/fields/userquestionsandanswers__c.field-meta.xml
<CustomField>
    <fullName>userquestionsandanswers__c</fullName>
    <description>This tag lists the questions asked by the user and answers from presenters</description>
    <label>userquestionsandanswers</label>
    <length>3600</length>
    <type>LongTextArea</type>
</CustomField>