metadata/force-app/main/default/objects/Attendee__c/fields/workphone__c.field-meta.xml
<CustomField>
    <fullName>workphone__c</fullName>
    <description>registrant provisioned text</description>
    <label>workphone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>