metadata/force-app/main/default/objects/Attendee__c/fields/zip__c.field-meta.xml
<CustomField>
    <fullName>zip__c</fullName>
    <description>registrant provisioned text</description>
    <label>zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>